# smartbill

./: README.md  pyproject.toml
.github/workflows/: ci.yml
smartbill/: hooks.py  modules.txt
smartbill/smartbill/doctype/bill/: bill.js  bill.json  bill.py  test_bill.py
smartbill/smartbill/doctype/bill_purpose/: bill_purpose.js  bill_purpose.json  bill_purpose.py  test_bill_purpose.py
smartbill/smartbill/doctype/customer/: customer.js  customer.json  customer.py  test_customer.py
